--- a/src/app/casilla-residente/casilla-residente.page.html
+++ b/src/app/casilla-residente/casilla-residente.page.html
@@ -94,11 +94,11 @@
     <ion-row >
       <ion-col size="1"></ion-col>
       <ion-col size="3">
-        <ion-button color = "dark" >SALIR</ion-button>
+        <ion-button color = "dark" href="./login-residente">SALIR</ion-button>
       </ion-col>
       <ion-col size="4"></ion-col>
       <ion-col size="3">
-        <ion-button color = "dark">PERFIL</ion-button>
+        <ion-button color = "dark" href="./perfil">PERFIL</ion-button>
       </ion-col>
       <ion-col size="1"></ion-col>
     </ion-row>
