--- a/src/app/conserje-main/conserje-main.page.html
+++ b/src/app/conserje-main/conserje-main.page.html
@@ -129,11 +129,11 @@
     <ion-row >
       <ion-col size="1"></ion-col>
       <ion-col size="3">
-        <ion-button color = "dark" >SALIR</ion-button>
+        <ion-button color = "dark" href="./login-conserje">SALIR</ion-button>
       </ion-col>
       <ion-col size="4"></ion-col>
       <ion-col size="3">
-        <ion-button color = "dark">PERFIL</ion-button>
+        <ion-button color = "dark" href="./perfil">PERFIL</ion-button>
       </ion-col>
       <ion-col size="1"></ion-col>
     </ion-row>
