--- a/src/app/crear-usuario/crear-usuario.page.html
+++ b/src/app/crear-usuario/crear-usuario.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-grid [fixed]="true">
     <ion-row>
-      <ion-col size="1"><ion-icon name="arrow-back-circle-outline" size="large" ></ion-icon></ion-col>
+      <ion-button href="./administrador-main"><ion-col size="1"><ion-icon name="arrow-back-circle-outline" size="large" ></ion-icon></ion-col></ion-button>
       <ion-col size="10"><ion-card-title><div class="ion-text-center">CREAR USUARIO</div></ion-card-title></ion-col>
     </ion-row>
   </ion-grid>
