se cambia a modo "routes" los botones de salir, se agregan los login de conserje y administrador, se agrega funcionalidad al boton "back" de crear usuario

--- a/src/app/login-administrador/login-administrador.page.html
+++ b/src/app/login-administrador/login-administrador.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <br><br><br><br>
   <ion-card>
-    <form [formGroup] = "formularioLoginAdmin">
+    
       <ion-card-header>
         <ion-card-title>
           <div class="ion-text-center">Ingreso Administrador</div>
@@ -20,14 +20,14 @@
       </ion-card-header>  
       <ion-card-content>
         <ion-item> 
-          <ion-input placeholder="Usuario"></ion-input>
+          <ion-input placeholder="RUT" [(ngModel)]="rut"></ion-input>
         </ion-item> 
         <ion-item> 
-          <ion-input type="password" placeholder="Contraseña"></ion-input>
+          <ion-input type="password" placeholder="Contraseña" [(ngModel)]="pass"></ion-input>
         </ion-item> 
       </ion-card-content>
     
-    </form>
+    
     <div class="ion-text-center">
       <ion-button (click) = "ingresarAdministrador()" expand="block" color="dark">ENTRAR</ion-button>
     </div>
