--- a/src/app/conserje-main/conserje-main.page.html
+++ b/src/app/conserje-main/conserje-main.page.html
@@ -55,7 +55,9 @@
       <ion-col size="1"></ion-col>
       <ion-col size="10">
 
-        <!-- solo demostracion, cambiar por infinite scroll cuando agreguemos funcionalidad-->
+        <div class="ion-text-center">
+          <ion-button href="./conserje-main" color="dark">Refrescar</ion-button>
+        </div> 
       <ion-card color="light">
           <ion-row>
             <ion-list-header>
@@ -116,7 +118,7 @@
     <ion-row >
       <ion-col size="1"></ion-col>
       <ion-col size="3">
-        <ion-button color = "dark" href="./login-conserje">SALIR</ion-button>
+        <ion-button color = "dark" (click) = salirAlLogin()>SALIR</ion-button>
       </ion-col>
       <ion-col size="4"></ion-col>
       <ion-col size="3">
