--- a/src/app/login-conserje/login-conserje.page.html
+++ b/src/app/login-conserje/login-conserje.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <br><br><br><br>
   <ion-card>
-    <form [formGroup] = "formularioLoginConserje">
+    
       <ion-card-header>
         <ion-card-title>
           <div class="ion-text-center">Ingreso Conserjes</div>
@@ -20,14 +20,12 @@
       </ion-card-header>  
       <ion-card-content>
         <ion-item> 
-          <ion-input placeholder="Usuario"></ion-input>
+          <ion-input placeholder="RUT" [(ngModel)]="rut"></ion-input>
         </ion-item> 
         <ion-item> 
-          <ion-input type="password" placeholder="Contraseña"></ion-input>
+          <ion-input type="password" placeholder="Contraseña" [(ngModel)]="pass"></ion-input>
         </ion-item> 
       </ion-card-content>
-    
-    </form>
     <div class="ion-text-center">
       <ion-button (click) = "ingresarConserje()" expand="block" color="dark">ENTRAR</ion-button>
     </div>
