--- a/src/app/login-administrador/login-administrador.page.html
+++ b/src/app/login-administrador/login-administrador.page.html
@@ -38,10 +38,10 @@
   <ion-card >
     <br>
     <div class="ion-text-center">
-      <ion-button href = "./login-conserje"  color="light">Conserje</ion-button>
+      <ion-button (click) = "ToLoginConserje()"  color="light">Conserje</ion-button>
     </div>
     <div class="ion-text-center">
-      <ion-button href = "./login-residente" color="light">Residentes</ion-button>
+      <ion-button (click) = "ToLoginResidente()" color="light">Residentes</ion-button>
     </div>
     <br>
   </ion-card>  
