--- a/src/app/login-residente/login-residente.page.html
+++ b/src/app/login-residente/login-residente.page.html
@@ -38,10 +38,10 @@
   <ion-card >
     <br>
     <div class="ion-text-center">
-      <ion-button href= "./login-conserje"  color="light">Conserjes</ion-button>
+      <ion-button (click) = "ToLoginConserje()"  color="light">Conserjes</ion-button>
     </div>
     <div class="ion-text-center">
-      <ion-button href = "./login-administrador" color="light">Administrativo</ion-button>
+      <ion-button (click) = "ToLoginAdmin()" color="light">Administrador</ion-button>
     </div>
     <br>
   </ion-card>  
