--- a/src/app/login-conserje/login-conserje.page.html
+++ b/src/app/login-conserje/login-conserje.page.html
@@ -36,10 +36,10 @@
   <ion-card >
     <br>
     <div class="ion-text-center">
-      <ion-button href = "./login-residente"  color="light">Residentes</ion-button>
+      <ion-button (click) = "ToLoginResidente()"  color="light">Residentes</ion-button>
     </div>
     <div class="ion-text-center">
-      <ion-button href = "./login-administrador" color="light">Administrativo</ion-button>
+      <ion-button (click) = "ToLoginAdmin()"  color="light">Administrador</ion-button>
     </div>
     <br>
   </ion-card>  
