--- a/src/app/conserje-main/conserje-main.page.html
+++ b/src/app/conserje-main/conserje-main.page.html
@@ -122,7 +122,7 @@
       </ion-col>
       <ion-col size="4"></ion-col>
       <ion-col size="3">
-        <ion-button color = "dark" href="./perfil">PERFIL</ion-button>
+        <ion-button color = "dark" (click) = PromptPerfil()>PERFIL</ion-button>
       </ion-col>
       <ion-col size="1"></ion-col>
     </ion-row>
